syntax = "proto3";

option go_package = "github.com/juxuny/supervisor/proxy";

package proxy;

service proxy {
  rpc Status(StatusReq) returns (StatusResp) {}
  rpc Update(UpdateReq) returns (UpdateResp) {}
}

message Status {
  uint32 listen_port = 1;
  string remote = 2;
}

message StatusReq {
}

message StatusResp {
  Status status = 1;
}


message UpdateReq {
  Status status = 1;
}

message UpdateResp {
  Status status = 1;
}

