syntax = "proto3";

service Supervisor {
  rpc Apply(ApplyReq) returns (ApplyResp);
}

message ApplyReq {
  DeployConfig config = 1;
}

message ApplyResp {
  uint32 code = 1;
  string msg = 2;
}

message DeployConfig {
  uint32 service_port = 1;
  string name = 2;
  string image = 3;
  string tag = 4;
  repeated Mount mounts = 5;
  string env_data = 6;
  repeated KeyValue envs = 7;
}

message Mount {
  string host_path = 1;
  string mount_path = 2;
}

message KeyValue {
  string key = 1;
  string values = 2;
}